<resources>
    <string name="app_name">Virtual Scorekeeper</string>
    <string name="action_settings">Settings</string>
    <string name="team_a_score">00</string>
    <string name="match_time">00:00</string>
    <string name="team_b_score">00</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
